src/objects/FinServ__DialogLookUpConfig__mdt.object
<CustomObject>
    <description>Defines options for creating new records from lookup fields in dialog boxes.</description>
    <fields>
        <fullName>FinServ__CreateEvent__c</fullName>
        <description>Specifies the type of custom dialog box to open.</description>
        <label>Create Event</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__CreateLabel__c</fullName>
        <description>Label of the New record option in the lookup field drop-down list.</description>
        <label>Create Label</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__DialogName__c</fullName>
        <description>Internal name of the dialog box to be opened.</description>
        <label>Dialog Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__FieldName__c</fullName>
        <description>Field name that the lookup field references.</description>
        <label>Field Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__ObjectName__c</fullName>
        <description>Name of the object associated with the lookup.</description>
        <label>Object Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__Order__c</fullName>
        <description>The order in which the New record option appears in the lookup field drop-down list.</description>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinServ__RecordTypeName__c</fullName>
        <description>Specifies the record type of the record to be created.</description>
        <label>Record Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DialogLookUpConfig</label>
    <pluralLabel>DialogLookUpConfigs</pluralLabel>
</CustomObject>